# DCASE_2026

./: .env.example  .gitignore  .gitmodules  DCASE2026_Task6_EDA.ipynb  README.md  README_Clotho.txt  pyproject.toml
docs/: NOTE.md  TODO.md
notebooks/: CLAP_Fine_tuning_on_Vietnamese_Dataset.ipynb  DCASE2026_Task6_baseline.ipynb  DCASE2206_Task4_EDA.ipynb  exp_task6_dataset.ipynb  starss_eda.ipynb  utils.ipynb
notebooks/eda/: DCASE2206_Task4_EDA.ipynb  DCASE2206_Task6_EDA.ipynb  DCASE2206_Task6_EDA_Small.ipynb
notebooks/experiments/: CLAP_Fine_tuning_on_Vietnamese_Dataset.ipynb  clotho_eda.ipynb  exp_task6_dataset.ipynb  starss_eda.ipynb  utils.ipynb
script/: migrate_to_vendors.sh
scripts/: feat_extract.sh  pull_submodule.sh
src/: __main__.py  config.py  create_submission.py  dataset.py  datasets.py  matcher.py  settings.py  vocab.py
src/modules/: _encoders.py  position_encoding.py  postprocessing.py  qd_detr.py  qd_detr_transformer.py
src/modules/attention/: cross_modal_fusion.py  multi_head.py
src/modules/augments/: audio.py  text.py
src/modules/feature_extractor/: audio_extract.py  query_extract.py
src/modules/inputs/: position_encoding.py
src/modules/mamba/: compressor.py  cross_attention.py  custom.py  dual_stream.py  gate_attention.py
src/modules/metrics/: label_metric.py  s5capi_metric.py
src/pipelines/: evaluate.py  train.py
src/standalone_eval/: eval.py  utils.py
src/utils/: __init__.py  basic_utils.py  calc_utils.py  io_utils.py  log_utils.py  misc.py  model_utils.py  span_utils.py  tensor_utils.py
(+2 files in other folders)
