[project]
name = "dcase-2026"
version = "0.1.0"
description = "DCASE 2026"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "noisereduce>=3.0.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pre-commit>=4.5.1",
    "py7zr>=1.1.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.9",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "soundfile>=0.13.1",
    "timm>=1.0.26",
    "torchaudio>=2.11.0",
    "torchcodec>=0.11.0",
    "torchlibrosa>=0.1.0",
    "transformers>=5.5.0",
]
